examples/test/testpolicy19283.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19283
  namespace: namespace200
spec:
  podSelector:
    matchLabels:
      key43: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value44
          key14: value9
          key18: value20
      podSelector:
        matchLabels:
          key15: value11
